added the index html file with the image tag

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <title>fist website</title>
+   <title>first website</title>
 
    <meta Charset="UTF-8"></head>
    
   <body>
     <h1>Welcome To Glambuoyant</h1>
-    <p>enter</p>
-    <h2> What We Offer</h2>
+    <p>Glambuoyant is a fashion haven, where opulence meets style. Our store showcases a curated collection of luxurious clothing, meticulously selected to elevate your fashion experience.</p>
+    <h2> From sophisticated dresses to chic accesories</h2>
+     <img src="Fashion.jpg" alt= "woman wearing sunglasses">
   </body>
 </html>
