added the index html with link

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Glambuoyant is a fashion haven, where opulence meets style. Our store showcases a curated collection of luxurious clothing, meticulously selected to elevate your fashion experience.</p>
     <h2> From sophisticated dresses to chic accesories</h2>
      <img src="Fashion.jpg" alt= "woman wearing sunglasses">
+     <a href="items.html">second page</a> 
   </body>
 </html>
