--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
    <title>first website</title>
 
-   <meta Charset="UTF-8"></head>
+   <meta Charset="UTF-8">
+<link rel="stylesheet" href="./my_styles.css"/>
+</head>
    
   <body>
     <h1>Welcome To Glambuoyant</h1>
