--- a/items.html
+++ b/items.html
@@ -3,7 +3,9 @@
 <head>
 <title>first website</title>
 
-   <meta Charset="UTF-8"></head>
+   <meta Charset="UTF-8">
+<link rel="stylesheet" href="./my_styles.css"/>
+</head>
 
 <body>
    <h1>What you Can find in store</h1>
